--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -49,5 +49,10 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Calculator
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/product-form">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Product Form
+            </NavLink>
+        </div>
     </nav>
 </div>
