--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -9,4 +9,5 @@
 @using MauiApp1.Components
 @using MauiApp1.Components.Layout
 @using MauiApp1.Components.Shared
-@using  MauiApp1.Model
+@using MauiApp1.Model
+@using MauiApp1.Services.Interfaces
